# aloop

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.agents/: AGENTS.md
.agents/skills/release/: SKILL.md
docs/: ACP.md  AGENTS-MD.md  ARCHITECTURE.md  CLI.md  COMPACTION.md  CONFIG.md  EMBEDDING.md  FILE-RESOLUTION.md  HOOKS.md  PERMISSIONS.md  SESSIONS.md  SUBAGENTS.md  SYSTEM-PROMPT.md
src/aloop/: __init__.py  acp.py  agent_backend.py  agent_result.py  backend.py  cli.py  compaction.py  config.py  executor.py  hooks.py  models.py  permissions.py  providers.py  session.py  system_prompt.py  tools_base.py  types.py  utils.py
src/aloop/tools/: __init__.py  agent.py  files.py  search.py  shell.py  skills.py
tests/: test_acp.py  test_agent_backend.py  test_agent_result.py  test_agent_tool.py  test_cli.py  test_cli_complete.py  test_compaction.py  test_complete.py  test_complete_live.py  test_discovery.py  test_edit_file.py  test_executor.py  test_fork.py  test_hooks_expansion.py  test_jsonc.py  test_modes.py  test_permissions.py  test_session_spawn_metadata.py  test_skills.py  test_subagent_config.py  test_subagent_integration.py  test_thinking.py  test_tool_decorator.py
